# QTonks

./: .gitignore  CMakeLists.txt  LICENSE  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  qtonks_parameterbuilderinjector.cpp  qtonks_parameterbuildermanager.cpp  qtonks_parameterbuildermanager.h  qtonks_widget.cpp  qtonks_widget.h
Example/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
QTonks/: CMakeLists.txt  qtonks_parameterbuilder.h  qtonks_parameterbuilderinjector.cpp  qtonks_widget.cpp  qtonks_widget.h
QTonks/parameters/: qtonks_enumeration.cpp  qtonks_enumeration.h  qtonks_group.cpp  qtonks_group.h  qtonks_switch.cpp  qtonks_switch.h
example/: CMakeLists.txt  mainwindow.ui
parameters/: qtonks_enumeration.cpp  qtonks_group.h  qtonks_groupparameter.cpp  qtonks_groupparameter.h  qtonks_groupparameterbuilder.cpp  qtonks_groupparameterbuilder.h  qtonks_switch.cpp  qtonks_switchparameter.cpp  qtonks_switchparameter.h  qtonks_switchparameterbuilder.cpp  qtonks_switchparameterbuilder.h
src/: CMakeLists.txt  qtonks_parameter.h  qtonks_parameterbuilder.h  qtonks_parameterbuilderinjector.cpp  qtonks_parameterbuilderinjector.h  qtonks_parameterbuildermanager.cpp  qtonks_widget.h
src/parameters/: qtonks_integer.cpp  qtonks_integer.h  qtonks_switch.h
